# auto-karaoke

./: .gitignore  README.md  pyproject.toml  requirements.txt
auto_karaoke/: main.py
src/auto_karaoke/: legacy.py  main.py  sampleKaraokeMugen.ass
