[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-karaoke"
version = "0.0.1"
authors = [
  { name="DiZeroX", email="dizerox@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DiZeroX/auto-karaoke"
"Bug Tracker" = "https://github.com/DiZeroX/auto-karaoke/issues"